--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,9 +9,9 @@ driver:
 platforms:
   - name: instance
     image: ghcr.io/projectpotos/ubuntu22-ansible-test:latest
-    pre_build_image: yes
+    pre_build_image: true
     command: /lib/systemd/systemd
-    privileged: yes
+    privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
