--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   test:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        distro:
+          - ubuntu20
+          - ubuntu22
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -30,3 +35,6 @@ jobs:
       - name: Test with molecule
         run: |
           molecule test
+        env:
+          MOLECULE_DISTRO: ${{ matrix.distro }}
+
