--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-
 # At least Ansible 2.12 is needed due to used features like 'argument_specs'
 ansible>=2.12
 
 # Required for testing
-ansible-lint[yamllint]
-molecule[docker, lint]
+
+## ansible/yaml lint
+ansible-lint~=6.15.0
+yamllint~=1.31.0
+
+## molecule tests
+molecule~=5.0.0
+molecule-plugins~=23.4.1
+docker~=6.0.1
